style: fix spacing when no events available

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -174,7 +174,6 @@ main {
 
 .pair > p {
   width: 100%;
-  height: 100%;
   margin: 0;
   text-align: center;
 }
